# booksort

./: .gitattributes  .gitignore  README.md  detection.ipynb  main.py  pyproject.toml
labels/: IMG_20180106_190653.json  IMG_20180106_190712.json  IMG_20231210_192150.json  IMG_20240210_151856.json  test.json
scripts/: detect_books_sam2.py
