[tool.flake8]
max-line-length = 99
extend-ignore = ["T201"]

[project]
name = "booksort"
version = "0.1.0"
description = ""
authors = [
    {name = "deshpande.jaidev@gmail.com",email = "deshpande.jaidev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
