[tool.flake8]
max-line-length = 99
extend-ignore = ["T201"]

[project]
name = "booksort"
version = "0.1.0"
description = ""
authors = [
    {name = "deshpande.jaidev@gmail.com",email = "deshpande.jaidev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "azure-ai-documentintelligence (>=1.0.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "ultralytics (>=8.3.221,<9.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[[tool.poetry.source]]
name = "cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "cu126"}
torchvision = {source = "cu126"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
